<resources>
    <string name="app_name">Credit Card Helper</string>
    <string name="card_balance">Enter Card Balance ($) </string>
    <string name="yearly_interest_rate">Enter Yearly Interest Rate (%) </string>
    <string name="minimum_payment">Enter Minimum Payment ($) </string>
    <string name="final_card_balance">Final Card Balance ($) </string>
    <string name="months_remaining">Months Remaining</string>
    <string name="interest_paid">Interest Paid Will Be ($)</string>
    <string name="Compute">COMPUTE</string>
    <string name="Clear">CLEAR</string>
</resources>
