<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.acadgild.com.session2_assignment2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

    <TextView android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_balance"
        android:layout_weight="3"
        android:textSize="@dimen/textSize" />

    <EditText android:id="@+id/card_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:textSize="@dimen/textSize"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yearly_interest_rate"
        android:textSize="@dimen/textSize"
        android:layout_weight="5" />

    <EditText android:id="@+id/yearly_interest_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:textSize="@dimen/textSize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minimum_payment"
            android:textSize="@dimen/textSize"
            android:layout_weight="5" />

        <EditText android:id="@+id/minimum_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:textSize="@dimen/textSize"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">
        <TextView android:id="@+id/txt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/final_card_balance"
            android:textSize="@dimen/textSize"
            android:layout_weight="6" />

        <EditText android:id="@+id/final_card_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="12"
            android:textSize="@dimen/textSize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/txt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/months_remaining"
            android:textSize="@dimen/textSize"
            android:layout_weight="6" />

        <EditText android:id="@+id/months_remaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="12"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/txt6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interest_paid"
            android:textSize="@dimen/textSize"
            android:layout_weight="6" />

        <EditText android:id="@+id/interest_to_be_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="12"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
    <Button android:id="@+id/computebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Compute"
        android:textSize="@dimen/textSize" />

    <Button android:id="@+id/clearbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Clear"
        android:textSize="@dimen/textSize"/>
        </LinearLayout>

</LinearLayout>
